fixed header being overlapped by elements on page (#70)

--- a/src/features/Header/Header.scss
+++ b/src/features/Header/Header.scss
@@ -1,40 +1,46 @@
-.header {
-    position: sticky;
-    top: 1px;
+.header-container {
+    width: 100%;
     height: 50px;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 15px;
-    padding-right: 15px;
+    position: sticky;
+    top: 0;
     z-index: 40;
+    background-color: $header-background;
+    
+    .header {
+        width: 80%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-left: auto;
+        margin-right: auto;
 
-    @include respond-to(medium) { 
-        width: 60% 
-    }
-
-    .app-name {
-       letter-spacing: -1px;
-       font-weight: 700;
-       font-size: 18px;
-    }
-    .header-navigation > span {
-        margin: 0 15px;
-        transition: all .3s;
-        cursor: pointer;
-        border-bottom: 1px solid transparent;
-
-        &:not(.active):hover {
-            color:$header-navigation-font-hover;
-            border-color: $header-navigation-font-hover;
+        @include respond-to(medium) { 
+            width: 60% 
         }
 
-        &.active {
-            color:$header-navigation-font-active;
-            border-color: $header-navigation-font-active;
+        .app-name {
+           letter-spacing: -1px;
+           font-weight: 700;
+           font-size: 18px;
+        }
+        .header-navigation > span {
+            margin: 0 15px;
+            transition: all .3s;
+            cursor: pointer;
+            border-bottom: 1px solid transparent;
+
+            &:not(.active):hover {
+                color:$header-navigation-font-hover;
+                border-color: $header-navigation-font-hover;
+            }
+
+            &.active {
+                color:$header-navigation-font-active;
+                border-color: $header-navigation-font-active;
+            }
         }
     }
 }
