--- a/src/styles/variables/variables.scss
+++ b/src/styles/variables/variables.scss
@@ -66,6 +66,7 @@ $site-font-color: #F3E4E4;
 
 $header-navigation-font-hover: #BCD4EC;
 $header-navigation-font-active: #979CA2;
+$header-background: #242121;
 
 /********************
 *       Images      *
